--- a/public/appsData.json
+++ b/public/appsData.json
@@ -332,7 +332,7 @@
     "size": 95,
     "reviews": 71,
     "ratingAvg": 4.2,
-    "downloads": 1000000000,
+    "downloads": 11.6,
     "ratings": [
       { "name": "1 star", "count": 220000 },
       { "name": "2 star", "count": 250000 },
